# AirlineFactory

AirlineFactory/: CMakeLists.txt
AirlineFactory/AirlineDLL/include/: AbstractAircraft.h  AircraftFactory.h  AircraftPrinter.h  Airline.h  AirlineService.h  CargoPlane.h  CargoPlaneFactory.h  CivilAircraft.h  PassengerJet.h  PassengerJetFactory.h  dll_export.h
AirlineFactory/AirlineDLL/src/: AbstractAircraft.cpp  AircraftFactory.cpp  AircraftPrinter.cpp  Airline.cpp  AirlineService.cpp  CargoPlane.cpp  CargoPlaneFactory.cpp  CivilAircraft.cpp  PassengerJet.cpp  PassengerJetFactory.cpp
AirlineFactory/TestApp/: main.cpp
